Add README and normalize packaging/test dependency setup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,230 +1,1 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.3
-aiohttp-client-cache==0.14.3
-aiosignal==1.4.0
-alembic==1.18.4
-annotated-doc==0.0.4
-annotated-types @ file:///home/task_176174488330724/conda-bld/annotated-types_1761744897939/work
-anyio==4.12.1
-appdirs==1.4.4
-attrs==25.4.0
-behave==1.3.3
-blinker==1.9.0
-blis==0.7.11
-bowler==0.9.0
-brotlicffi @ file:///home/task_176496126216915/conda-bld/brotlicffi_1764961310969/work
-cachetools==6.2.6
-catalogue @ file:///croot/catalogue_1703688140886/work
-cattrs==25.3.0
-certifi @ file:///home/task_176765898832781/croot/certifi_1767659141017/work/certifi
-cffi @ file:///home/task_176183215235376/conda-bld/cffi_1761832773734/work
-charset-normalizer @ file:///home/task_176174480956840/conda-bld/charset-normalizer_1761744822896/work
-click @ file:///home/task_176433223059444/conda-bld/click_1764332278448/work
-cloudpathlib @ file:///home/task_176778627517815/croot/cloudpathlib_1767787176618/work
-cloudpickle @ file:///home/task_176493044922977/conda-bld/cloudpickle_1764930462570/work
-colorama @ file:///work/ci_py311/colorama_1676827038675/work
-confection @ file:///croot/confection_1750275266333/work
-contourpy==1.3.3
-cryptography==46.0.5
-cucumber-expressions==19.0.0
-cucumber-tag-expressions==9.0.0
-cuda-bindings==12.9.4
-cuda-pathfinder==1.3.4
-curated-tokenizers==0.0.9
-curated-transformers==0.1.1
-cycler==0.12.1
-cymem @ file:///home/task_175698354288853/conda-bld/cymem_1756984387102/work
-databricks-sdk==0.88.0
-dataclasses-json==0.6.7
-datasets==4.5.0
-dill==0.4.0
-distro==1.9.0
-docker==7.1.0
-elastic-transport==8.17.1
-elasticsearch==8.19.3
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl#sha256=f72abb34bdf174876bd4267b29b2501677e605e0a251fdc56c163003182ed68b
-fastapi==0.128.8
-fastcoref==2.1.6
-filelock==3.20.3
-fissix==24.4.24
-Flask==3.1.2
-flask-cors==6.0.2
-fonttools==4.61.1
-frozenlist==1.8.0
-fsspec==2025.10.0
-gitdb==4.0.12
-GitPython==3.1.46
-google-auth==2.48.0
-graphene==3.4.3
-graphql-core==3.2.7
-graphql-relay==3.2.0
-greenlet==3.3.1
-gunicorn==23.0.0
-h11==0.16.0
-hf-xet==1.2.0
-HomeAssistant-API==5.0.2.post2
-httpcore==1.0.9
-httpx==0.28.1
-httpx-sse==0.4.3
-huey==2.6.0
-huggingface_hub==0.36.2
-idna @ file:///home/task_176191178300919/conda-bld/idna_1761911982343/work
-importlib_metadata==8.7.1
-iniconfig @ file:///home/task_176735680440987/croot/iniconfig_1767356866218/work
-itsdangerous==2.2.0
-Jinja2 @ file:///croot/jinja2_1741710844255/work
-jiter==0.13.0
-joblib==1.5.3
-jsonpatch==1.33
-jsonpointer==3.0.0
-kiwisolver==1.4.9
-langchain==1.2.10
-langchain-classic==1.0.1
-langchain-community==0.4.1
-langchain-core==1.2.11
-langchain-ollama==1.0.1
-langchain-openai==1.1.9
-langchain-tavily==0.2.17
-langchain-text-splitters==1.1.0
-langcodes @ file:///home/task_175757464963359/conda-bld/langcodes_1757574799209/work
-langgraph==1.0.8
-langgraph-checkpoint==3.0.1
-langgraph-prebuilt==1.0.7
-langgraph-sdk==0.3.5
-langsmith==0.7.1
-language_data @ file:///home/task_175750885048795/conda-bld/language-data_1757509275730/work
-librt==0.8.0
-Mako==1.3.10
-marisa-trie @ file:///home/task_175750331984018/conda-bld/marisa-trie_1757503574143/work
-markdown-it-py @ file:///home/task_176700164333214/croot/markdown-it-py_1767001665856/work
-MarkupSafe @ file:///croot/markupsafe_1738584038848/work
-marshmallow==3.26.2
-matplotlib==3.10.8
-mdurl @ file:///home/task_175855215063312/conda-bld/mdurl_1758552166963/work
-mkl-service==2.5.2
-mkl_fft @ file:///home/task_176159258761192/conda-bld/mkl_fft_1761592901799/work
-mkl_random @ file:///home/task_176159293348456/conda-bld/mkl_random_1761592947335/work
-mlflow==3.9.0
-mlflow-skinny==3.9.0
-mlflow-tracing==3.9.0
-moreorless==0.5.0
-mpmath==1.3.0
-multidict==6.7.1
-multiprocess==0.70.18
-murmurhash @ file:///home/task_176471019383348/conda-bld/murmurhash_1764710941273/work
-mypy==1.19.1
-mypy_extensions==1.1.0
-negspacy==1.0.4
-networkx==3.6.1
-numpy==1.26.4
-nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu12==12.8.90
-nvidia-cuda-nvrtc-cu12==12.8.93
-nvidia-cuda-runtime-cu12==12.8.90
-nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu12==11.3.3.83
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu12==12.5.8.93
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.5
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvshmem-cu12==3.4.5
-nvidia-nvtx-cu12==12.8.90
-ollama==0.6.1
-openai==2.20.0
-opentelemetry-api==1.39.1
-opentelemetry-proto==1.39.1
-opentelemetry-sdk==1.39.1
-opentelemetry-semantic-conventions==0.60b1
-orjson==3.11.7
-ormsgpack==1.12.2
-packaging @ file:///home/task_176104885106445/conda-bld/packaging_1761049078006/work
-pandas==2.3.3
-parse==1.21.0
-parse_type==0.6.6
-pathspec==1.0.4
-pillow==12.1.1
-platformdirs==4.5.1
-pluggy @ file:///croot/pluggy_1733169602837/work
-preshed @ file:///home/task_176616351034945/croot/preshed_1766163536184/work
-prettytable==3.17.0
-propcache==0.4.1
-protobuf==6.33.5
-pyarrow==22.0.0
-pyasn1==0.6.2
-pyasn1_modules==0.4.2
-pycparser @ file:///home/task_175749606196006/conda-bld/pycparser_1757496076770/work
-pydantic @ file:///home/task_176408315465032/conda-bld/pydantic_1764083528036/work
-pydantic-settings==2.12.0
-pydantic_core @ file:///home/task_176400930864362/conda-bld/pydantic-core_1764009743760/work
-Pygments @ file:///home/task_176243133773609/conda-bld/pygments_1762431407413/work
-pyparsing==3.3.2
-PySocks @ file:///home/task_176175228059944/conda-bld/pysocks_1761753009523/work
-pytest @ file:///home/task_176978722924365/croot/pytest_1769787672032/work
-python-dateutil==2.9.0.post0
-python-dotenv @ file:///home/task_176855924653788/croot/python-dotenv_1768559686959/work
-pytz==2025.2
-PyYAML==6.0.3
-regex==2026.1.15
-requests @ file:///home/task_176235919505742/conda-bld/requests_1762359593170/work
-requests-cache==1.3.0
-requests-toolbelt==1.0.0
-rich @ file:///croot/rich_1732638981168/work
-rsa==4.9.1
-ruamel-yaml-conda @ file:///work/ci_py311/ruamel_yaml_1676845707897/work
-safetensors==0.7.0
-scikit-learn==1.8.0
-scipy==1.17.0
-shellingham @ file:///home/task_176191202301709/conda-bld/shellingham_1761912204592/work
-simplejson==3.20.2
-six==1.17.0
-skops==0.13.0
-smart_open @ file:///home/task_177003416757015/croot/smart_open_1770034242192/work
-smmap==5.0.2
-sniffio==1.3.1
-spacy==3.7.5
-spacy-curated-transformers==0.2.2
-spacy-experimental==0.6.4
-spacy-legacy @ file:///croot/spacy-legacy_1684141107874/work
-spacy-loggers @ file:///home/task_176795235144248/croot/spacy-loggers_1767952417499/work
-spacy-lookups-data==1.0.5
-SQLAlchemy==2.0.46
-sqlparse==0.5.5
-srsly @ file:///home/task_176425462390765/conda-bld/srsly_1764254640440/work
-starlette==0.52.1
-sympy==1.14.0
-tenacity==9.1.4
-thinc==8.2.5
-threadpoolctl==3.6.0
-tiktoken==0.12.0
-tokenizers==0.22.2
-torch==2.10.0
-tqdm @ file:///home/task_177071870170071/croot/tqdm_1770719100139/work
-transformers==4.57.6
-triton==3.6.0
-typer @ file:///croot/typer_1684251874311/work
-typer-slim==0.20.0
-typing-inspect==0.9.0
-typing-inspection @ file:///home/task_176061348755839/conda-bld/typing-inspection_1760614176595/work
-typing_extensions @ file:///croot/typing_extensions_1756280817316/work
-tzdata==2025.3
-ujson @ file:///home/task_176311914950304/conda-bld/ujson_1763119196322/work
-url-normalize==2.2.1
-urllib3 @ file:///home/task_176781010927466/croot/urllib3_1767810311566/work
-uuid_utils==0.14.0
-uvicorn==0.40.0
-volatile==2.1.0
-vowpalwabbit==9.10.0
-wasabi @ file:///home/task_175734554777152/conda-bld/wasabi_1757345803063/work
-wcwidth==0.6.0
-weasel @ file:///home/task_176735688160296/croot/weasel_1767357566273/work
-websockets==15.0.1
-Werkzeug==3.1.5
-wrapt @ file:///home/task_176424373000493/conda-bld/wrapt_1764243741923/work
-xxhash==3.6.0
-yarl==1.22.0
-zipp==3.23.0
-zstandard==0.25.0
+-e .[test]
