--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,33 @@
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "semanticng"
 version = "0.1.0"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 dependencies = [
-  "pydantic>=2.6",
-  "pydantic-settings>=2.2",
-  "orjson>=3.10",
-  "httpx>=0.27",
-  "tenacity>=9.0",
-  "rich>=13.7",
+  "pydantic>=2.6,<3",
 ]
 
 [project.optional-dependencies]
 test = [
-  "pytest>=8",
-  "pytest-cov>=5",
-  "mypy>=1.9",
-  "ruff>=0.6",
-  "behave>=1.2.6",
+  "pytest>=8,<9",
+  "pytest-cov>=5,<6",
+  "mypy>=1.9,<2",
+  "ruff>=0.6,<1",
+  "gherkin-official>=30,<31",
 ]
-gherkin = [
-  "gherkin-official>=30",          # if you generate/parse .feature AST
-  "cucumber-expressions>=19.0.0",  # if you want cucumber-expr matching
-]
-es = ["elasticsearch>=8.15"]
-ha = ["HomeAssistant-API>=5.0.2.post2"]
-ollama = ["ollama>=0.6"]
-lang = [
-  "langgraph>=1.0",
-  "langchain-core>=0.3",  # only if truly used
+bdd = [
+  "behave>=1.2.6,<2",
+  "deeponto>=0.9,<1",
 ]
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
