--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -64,14 +64,17 @@
     {
       "id": "replay_projection_analytics",
       "title": "Replay-grade projection and correction analytics",
-      "status": "planned",
-      "roadmap_section": "Later",
+      "status": "in_progress",
+      "roadmap_section": "Next",
       "code_paths": [
         "src/state_renormalization/engine.py",
         "src/state_renormalization/adapters/persistence.py",
         "src/state_renormalization/contracts.py"
       ],
-      "pytest_commands": []
+      "pytest_commands": [
+        "pytest tests/test_predictions_contracts_and_gates.py tests/test_persistence_jsonl.py",
+        "pytest tests/test_replay_projection_analytics.py tests/test_prediction_outcome_binding.py"
+      ]
     }
   ]
 }
