--- a/.github/workflows/state-renorm-milestone-gate.yml
+++ b/.github/workflows/state-renorm-milestone-gate.yml
@@ -5,11 +5,19 @@ on:
     paths:
       - 'src/state_renormalization/**'
       - 'docs/dod_manifest.json'
+      - 'docs/system_contract_map.md'
+      - 'ROADMAP.md'
+      - '.github/pull_request_template.md'
+      - '.github/scripts/validate_milestone_docs.py'
       - '.github/workflows/state-renorm-milestone-gate.yml'
   merge_group:
     paths:
       - 'src/state_renormalization/**'
       - 'docs/dod_manifest.json'
+      - 'docs/system_contract_map.md'
+      - 'ROADMAP.md'
+      - '.github/pull_request_template.md'
+      - '.github/scripts/validate_milestone_docs.py'
       - '.github/workflows/state-renorm-milestone-gate.yml'
 
 jobs:
@@ -30,6 +38,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -e ".[test]"
+
+      - name: Validate milestone documentation governance
+        env:
+          BASE_SHA: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
+          HEAD_SHA: ${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }}
+          GITHUB_EVENT_NAME: ${{ github.event_name }}
+          GITHUB_EVENT_PATH: ${{ github.event_path }}
+        run: python .github/scripts/validate_milestone_docs.py
 
       - name: Run milestone pytest commands for relevant changes
         env:
