--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -88,6 +88,36 @@
       "pytest_commands": [
         "pytest tests/test_predictions_contracts_and_gates.py"
       ]
+    },
+    {
+      "id": "capability_invocation_governance",
+      "title": "Capability-invocation governance (policy-aware external actions)",
+      "status": "planned",
+      "roadmap_section": "Later",
+      "code_paths": [
+        "src/state_renormalization/engine.py",
+        "src/state_renormalization/contracts.py",
+        "src/state_renormalization/adapters/"
+      ],
+      "pytest_commands": [
+        "pytest tests/test_capability_invocation_governance.py tests/test_capability_adapter_policy_guards.py",
+        "pytest tests/test_predictions_contracts_and_gates.py"
+      ]
+    },
+    {
+      "id": "repair_aware_projection_evolution",
+      "title": "Evolution path toward repair-aware projection (without silent mutation)",
+      "status": "planned",
+      "roadmap_section": "Later",
+      "code_paths": [
+        "src/state_renormalization/invariants.py",
+        "src/state_renormalization/engine.py",
+        "src/state_renormalization/contracts.py"
+      ],
+      "pytest_commands": [
+        "pytest tests/test_repair_mode_projection.py tests/test_repair_events_auditability.py",
+        "pytest tests/test_predictions_contracts_and_gates.py"
+      ]
     }
   ]
 }
