Add contract map refs and enforce milestone doc linkage

--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -18,6 +18,10 @@
       ],
       "pytest_commands": [
         "pytest tests/test_stable_ids.py tests/test_persistence_jsonl.py tests/test_predictions_contracts_and_gates.py"
+      ],
+      "contract_map_refs": [
+        "Prediction append contract",
+        "Projection view contract"
       ]
     },
     {
@@ -31,6 +35,10 @@
       ],
       "pytest_commands": [
         "pytest tests/test_contracts_belief_state.py tests/test_contracts_decision_effect_shape.py tests/test_engine_pending_obligation.py tests/test_engine_pending_obligation_minimal.py"
+      ],
+      "contract_map_refs": [
+        "Pending-obligation belief contract",
+        "Channel-agnostic decision/effect contract"
       ]
     },
     {
@@ -45,6 +53,10 @@
       ],
       "pytest_commands": [
         "pytest tests/test_schema_selector.py tests/test_schema_bubbling_option_a.py tests/test_capture_outcome_states.py tests/test_engine_calls_selector_with_generic_error.py"
+      ],
+      "contract_map_refs": [
+        "Ambiguity selection contract",
+        "Pending-obligation belief contract"
       ]
     },
     {
@@ -59,6 +71,9 @@
       ],
       "pytest_commands": [
         "pytest tests/test_predictions_contracts_and_gates.py tests/test_persistence_jsonl.py"
+      ],
+      "contract_map_refs": [
+        "Halt normalization contract"
       ]
     },
     {
@@ -74,6 +89,9 @@
       "pytest_commands": [
         "pytest tests/test_observer_frame.py",
         "pytest tests/test_predictions_contracts_and_gates.py tests/test_invariants.py"
+      ],
+      "contract_map_refs": [
+        "Observer authorization contract"
       ]
     },
     {
@@ -89,6 +107,10 @@
       "pytest_commands": [
         "pytest tests/test_predictions_contracts_and_gates.py tests/test_persistence_jsonl.py",
         "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_prediction_outcome_binding.py"
+      ],
+      "contract_map_refs": [
+        "Replay projection analytics contract",
+        "Projection view contract"
       ]
     },
     {
@@ -102,6 +124,10 @@
       ],
       "pytest_commands": [
         "pytest tests/test_predictions_contracts_and_gates.py"
+      ],
+      "contract_map_refs": [
+        "Projection view contract",
+        "Prediction append contract"
       ]
     },
     {
@@ -117,6 +143,10 @@
       "pytest_commands": [
         "pytest tests/test_capability_invocation_governance.py tests/test_capability_adapter_policy_guards.py",
         "pytest tests/test_predictions_contracts_and_gates.py"
+      ],
+      "contract_map_refs": [
+        "Channel-agnostic decision/effect contract",
+        "Observer authorization contract"
       ]
     },
     {
@@ -132,6 +162,10 @@
       "pytest_commands": [
         "pytest tests/test_repair_mode_projection.py tests/test_repair_events_auditability.py",
         "pytest tests/test_predictions_contracts_and_gates.py"
+      ],
+      "contract_map_refs": [
+        "Replay projection analytics contract",
+        "Projection view contract"
       ]
     }
   ]
