--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -96,7 +96,7 @@
     },
     {
       "id": "replay_projection_analytics",
-      "title": "Replay-grade projection and correction analytics",
+      "title": "Replay-grade projection reconstruction and deterministic restart analytics",
       "status": "in_progress",
       "roadmap_section": "Later",
       "code_paths": [
@@ -106,7 +106,7 @@
       ],
       "pytest_commands": [
         "pytest tests/test_predictions_contracts_and_gates.py tests/test_persistence_jsonl.py",
-        "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_prediction_outcome_binding.py"
+        "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py"
       ],
       "contract_map_refs": [
         "Replay projection analytics contract",
