--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -107,7 +107,8 @@
       ],
       "pytest_commands": [
         "pytest tests/test_predictions_contracts_and_gates.py tests/test_persistence_jsonl.py",
-        "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py"
+        "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py",
+        "pytest tests/replay_projection_analytics/test_append_only_replay.py"
       ],
       "contract_map_refs": [
         "Replay projection analytics contract",
