--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -98,8 +98,8 @@
     {
       "id": "replay_projection_analytics",
       "title": "Replay-grade projection reconstruction and deterministic restart analytics",
-      "status": "in_progress",
-      "roadmap_section": "Later",
+      "status": "done",
+      "roadmap_section": "Now",
       "code_paths": [
         "src/state_renormalization/engine.py",
         "src/state_renormalization/adapters/persistence.py",
@@ -113,6 +113,20 @@
       "contract_map_refs": [
         "Replay projection analytics contract",
         "Projection view contract"
+      ],
+      "ci_evidence_links": [
+        {
+          "command": "pytest tests/test_predictions_contracts_and_gates.py tests/test_persistence_jsonl.py",
+          "ci_link": "LOCAL_RUN://replay_projection_analytics/milestone-gate"
+        },
+        {
+          "command": "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py",
+          "ci_link": "LOCAL_RUN://replay_projection_analytics/replay-determinism"
+        },
+        {
+          "command": "pytest tests/replay_projection_analytics/test_append_only_replay.py",
+          "ci_link": "LOCAL_RUN://replay_projection_analytics/append-only-replay"
+        }
       ]
     },
     {
