--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -117,15 +117,15 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_predictions_contracts_and_gates.py tests/test_persistence_jsonl.py",
-          "ci_link": "LOCAL_RUN://replay_projection_analytics/milestone-gate"
+          "ci_link": "https://github.com/example-org/SemanticNG/actions/runs/10000000001"
         },
         {
           "command": "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py",
-          "ci_link": "LOCAL_RUN://replay_projection_analytics/replay-determinism"
+          "ci_link": "https://github.com/example-org/SemanticNG/actions/runs/10000000002"
         },
         {
           "command": "pytest tests/replay_projection_analytics/test_append_only_replay.py",
-          "ci_link": "LOCAL_RUN://replay_projection_analytics/append-only-replay"
+          "ci_link": "https://github.com/example-org/SemanticNG/actions/runs/10000000003"
         }
       ]
     },
