--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -132,8 +132,8 @@
     {
       "id": "replay_projection_analytics",
       "title": "Replay-grade projection reconstruction and deterministic restart analytics",
-      "status": "in_progress",
-      "roadmap_section": "Later",
+      "status": "done",
+      "roadmap_section": "Now",
       "code_paths": [
         "src/state_renormalization/engine.py",
         "src/state_renormalization/adapters/persistence.py",
@@ -141,8 +141,9 @@
       ],
       "pytest_commands": [
         "pytest tests/test_predictions_contracts_and_gates.py tests/test_persistence_jsonl.py",
-        "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py",
-        "pytest tests/replay_projection_analytics/test_append_only_replay.py"
+        "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py tests/replay_projection_analytics/test_append_only_replay.py",
+        "pytest tests/test_hitl_protocol.py tests/test_engine_projection_mission_loop.py tests/test_contracts_halt_record.py tests/test_demo_runner.py",
+        "pytest tests/test_scenario_convergence_reporting.py"
       ],
       "contract_map_refs": [
         "Replay projection analytics contract",
@@ -154,11 +155,15 @@
           "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
         },
         {
-          "command": "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py",
+          "command": "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py tests/replay_projection_analytics/test_append_only_replay.py",
           "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
         },
         {
-          "command": "pytest tests/replay_projection_analytics/test_append_only_replay.py",
+          "command": "pytest tests/test_hitl_protocol.py tests/test_engine_projection_mission_loop.py tests/test_contracts_halt_record.py tests/test_demo_runner.py",
+          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+        },
+        {
+          "command": "pytest tests/test_scenario_convergence_reporting.py",
           "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
         }
       ]
