--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -244,5 +244,9 @@
         }
       ]
     }
-  ]
+  ],
+  "canonical_source_of_truth": {
+    "capability_status_field": "status",
+    "required_pytest_commands_field": "pytest_commands"
+  }
 }
