--- a/.github/workflows/state-renorm-milestone-gate.yml
+++ b/.github/workflows/state-renorm-milestone-gate.yml
@@ -10,6 +10,7 @@ on:
       - '.github/pull_request_template.md'
       - '.github/scripts/validate_milestone_docs.py'
       - '.github/scripts/capability_parity_report.py'
+      - '.github/scripts/render_transition_evidence.py'
       - '.github/workflows/state-renorm-milestone-gate.yml'
   pull_request_target:
     paths:
@@ -20,6 +21,7 @@ on:
       - '.github/pull_request_template.md'
       - '.github/scripts/validate_milestone_docs.py'
       - '.github/scripts/capability_parity_report.py'
+      - '.github/scripts/render_transition_evidence.py'
       - '.github/workflows/state-renorm-milestone-gate.yml'
   merge_group:
     paths:
@@ -30,6 +32,7 @@ on:
       - '.github/pull_request_template.md'
       - '.github/scripts/validate_milestone_docs.py'
       - '.github/scripts/capability_parity_report.py'
+      - '.github/scripts/render_transition_evidence.py'
       - '.github/workflows/state-renorm-milestone-gate.yml'
 
 jobs:
@@ -77,7 +80,9 @@ jobs:
           echo "head_sha=$head_sha" >> "$GITHUB_OUTPUT"
 
       - name: Verify PR template AUTOGEN section is current
-        run: python .github/scripts/render_transition_evidence.py --check-pr-template-autogen
+        run: |
+          python .github/scripts/render_transition_evidence.py --regenerate-pr-template
+          git diff --exit-code .github/pull_request_template.md
 
       - name: Render transition evidence block
         id: render_transition_evidence
