Align roadmap and contract map with replay done transition

--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -133,7 +133,7 @@
       "id": "replay_projection_analytics",
       "title": "Replay-grade projection reconstruction and deterministic restart analytics",
       "status": "done",
-      "roadmap_section": "Later",
+      "roadmap_section": "Now",
       "code_paths": [
         "src/state_renormalization/engine.py",
         "src/state_renormalization/adapters/persistence.py",
